[package]
name = "polkadot-primitives"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.137", optional = true, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["bit-vec", "derive"] }
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
inherents = { package = "sp-inherents", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-consensus-slots = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-keystore = { git = "https://github.com/koute/substrate", optional = true , branch = "master_check_if_madvise_works" }
sp-api = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-version = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-std = { package = "sp-std", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-io = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-staking = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-arithmetic = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-authority-discovery = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
hex-literal = "0.3.4"
parity-util-mem = { version = "0.11.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
runtime-benchmarks = []
