[package]
name = "polkadot-rpc"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.14.0", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-blockchain = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-keystore = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-consensus = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-consensus-babe = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-chain-spec = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-consensus-babe = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-consensus-babe-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-consensus-epochs = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-finality-grandpa = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-finality-grandpa-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-sync-state-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-mmr-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-block-builder = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
beefy-gadget = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
beefy-gadget-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
substrate-state-trie-migration-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
