[package]
name = "polkadot-client"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
frame-benchmarking = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-benchmarking-cli = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-system = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-system-rpc-runtime-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

sp-consensus = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-storage = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-blockchain = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-keyring = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-inherents = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-timestamp = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-session = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-authority-discovery = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-finality-grandpa = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-consensus-babe = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-transaction-pool = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-block-builder = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-mmr-primitives = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }

sc-consensus = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-executor = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-client-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-service = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }

beefy-primitives = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
