[package]
name = "polkadot-node-metrics"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Subsystem metric helpers"

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../gum" }

metered = { package = "prioritized-metered-channel", path = "../metered-channel" , "version" = "0.2.0" }

# Both `sc-service` and `sc-cli` are required by runtime metrics `logger_hook()`.
sc-service = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-cli = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

substrate-prometheus-endpoint = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-tracing = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
primitives = { package = "polkadot-primitives", path = "../../primitives/" }
bs58 = { version = "0.4.0", features = ["alloc"] }
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0.4"
nix = "0.24.1"
tempfile = "3.2.0"
hyper = { version = "0.14.19", default-features = false, features = ["http1", "tcp"] }
tokio = "1.18.2"
polkadot-test-service = { path = "../test/service", features=["runtime-metrics"]}
substrate-test-utils = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-service = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-keyring = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-client-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
prometheus-parse = {version = "0.2.2"}

[features]
default = []
runtime-metrics = []
runtime-benchmarks = []
