[package]
name = "polkadot-primitives-test-helpers"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
