[package]
name = "polkadot-voter-bags"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }

generate-bags = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-io = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

westend-runtime = { path = "../../runtime/westend" }
kusama-runtime = { path = "../../runtime/kusama" }
polkadot-runtime = { path = "../../runtime/polkadot" }
