[package]
name = "pallet-xcm-benchmarks"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.9.25"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-system = { default-features = false, git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { default-features = false, git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-std = { default-features = false, git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
xcm-executor = { path = "../xcm-executor", default-features = false, features = ["runtime-benchmarks"] }
frame-benchmarking = { default-features = false, git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
xcm = { path = "..", default-features = false, features = ["runtime-benchmarks"] }
log = "0.4.17"

[dev-dependencies]
pallet-balances = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-assets = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-io = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-tracing = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
polkadot-runtime-common = { path = "../../runtime/common" }
# westend-runtime = { path = "../../runtime/westend", features = ["runtime-benchmarks"] }
polkadot-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
