[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-xcm"
version = "0.9.25"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

sp-std = { git = "https://github.com/koute/substrate", default-features = false, branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", default-features = false, branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", default-features = false, branch = "master_check_if_madvise_works" }
frame-support = { git = "https://github.com/koute/substrate", default-features = false, branch = "master_check_if_madvise_works" }
frame-system = { git = "https://github.com/koute/substrate", default-features = false, branch = "master_check_if_madvise_works" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
sp-io = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
xcm-builder = { path = "../xcm-builder" }
polkadot-parachain = { path = "../../parachain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks"
]
