[package]
name = "pallet-shift-session-manager"
description = "A Substrate Runtime module that selects 2/3 of initial validators for every session"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate Dependencies

frame-support = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
frame-system = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
pallet-session = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-staking = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-std = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }

[dev-dependencies]
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"scale-info/std",
	"sp-staking/std",
	"sp-std/std",
]
