[package]
name = "bp-rialto"
description = "Primitives of Rialto runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies

bp-messages = { path = "../messages", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies

frame-support = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
frame-system = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-api = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
sp-std = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
