[package]
name = "relay-rialto-parachain-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }

# Bridge dependencies

bp-rialto = { path = "../../primitives/chain-rialto" }
rialto-parachain-runtime = { path = "../../bin/rialto-parachain/runtime" }

# Substrate Dependencies

frame-system = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-support = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
