[package]
name = "relay-substrate-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
async-trait = "0.1.40"
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.8", features = ["macros", "ws-client"] }
log = "0.4.11"
num-traits = "0.2"
rand = "0.7"
serde = { version = "1.0" }
tokio = { version = "1.8", features = ["rt-multi-thread"] }
thiserror = "1.0.26"

# Bridge dependencies

bp-header-chain = { path = "../../primitives/header-chain" }
bp-messages = { path = "../../primitives/messages" }
bp-runtime = { path = "../../primitives/runtime" }
pallet-bridge-messages = { path = "../../modules/messages" }
finality-relay = { path = "../finality" }
relay-utils = { path = "../utils" }

# Substrate Dependencies

frame-support = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-system = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-balances = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-chain-spec = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-rpc-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-transaction-pool-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-finality-grandpa = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-rpc = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-storage = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-trie = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-version = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

#[dev-dependencies]
futures = "0.3.7"
