[package]
name = "polkadot-node-core-runtime-api"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
memory-lru = "0.1.0"
parity-util-mem = { version = "0.11.0", default-features = false }

sp-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-authority-discovery = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-consensus-babe = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = {path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-keyring = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
futures = { version = "0.3.21", features = ["thread-pool"] }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
polkadot-node-primitives = { path = "../../primitives" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives/test-helpers" }
