[package]
name = "polkadot-test-client"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-service = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-block-builder = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-consensus = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-blockchain = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-inherents = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-timestamp = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-consensus = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-consensus-babe = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-state-machine = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
futures = "0.3.21"
