[package]
name = "polkadot-test-service"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
hex = "0.4.3"
gum = { package = "tracing-gum", path = "../../gum" }
rand = "0.8.5"
tempfile = "3.2.0"
tokio = "1.18.2"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
test-runtime-constants = { path = "../../../runtime/test-runtime/constants" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-authority-discovery = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
babe = { package = "sc-consensus-babe", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
consensus_common = { package = "sp-consensus", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-benchmarking = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-system = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
inherents = { package = "sp-inherents", git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-staking = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-balances = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-transaction-payment = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-chain-spec = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-cli = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-client-api = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-consensus = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-executor = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-network = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-tracing = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-transaction-pool = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sc-service = { git = "https://github.com/koute/substrate", default-features = false, features = [ "wasmtime" ] , branch = "master_check_if_madvise_works" }
sp-arithmetic = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-blockchain = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-keyring = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-state-machine = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
substrate-test-client = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/koute/substrate", default-features = false , branch = "master_check_if_madvise_works" }
serde_json = "1.0.81"
substrate-test-utils = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
tokio = { version = "1.18.2", features = ["macros"] }

[features]
runtime-metrics=["polkadot-test-runtime/runtime-metrics"]
