[package]
name = "test-parachain-halt"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test parachain which executes forever"
edition = "2021"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

[features]
default = [ "std" ]
std = []
