[package]
name = "xcm-simulator-fuzzer"
version = "0.9.25"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
honggfuzz = "0.5.54"
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
frame-support = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
pallet-balances = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-std = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-core = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-runtime = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }
sp-io = { git = "https://github.com/koute/substrate", branch = "master_check_if_madvise_works" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }

[[bin]]
path = "src/fuzz.rs"
name = "xcm-fuzzer"
